# bazel-test

./: .bazelrc  BUILD.bazel  MODULE.bazel  compile-parserutils.sh  compile-perl.sh  compile-zlib.sh  compile.sh  compile_envs.sh  hello_world_bin.c  hello_world_lib.cpp  hello_world_lib.h  refresh.sh  test.lds
