module(
    name = "hermetic_cc_toolchain_my_tests",
    version = "0.0.1",
)

bazel_dep(
    name = "hermetic_cc_toolchain",
    version = "3.1.0",
)
bazel_dep(name = "zlib", version = "1.3.1.bcr.3")
bazel_dep(name = "sqlite3", version = "3.42.0.bcr.1")
bazel_dep(name = "brotli", version = "1.1.0")
bazel_dep(name = "libyaml", version = "0.2.5")
bazel_dep(name = "yaml-cpp", version = "0.8.0")
#bazel_dep(name = "libmaxminddb", version = "1.10.0")
bazel_dep(name = "cmake_configure_file", version = "0.1.0")
bazel_dep(name = "libmaxminddb", version = "1.10.0")
#bazel_dep(name = "libmaxminddb")
#local_path_override(
#    module_name = "libmaxminddb",
#    path = "/home/dmikhin/git/bazel/libmaxminddb",
#)
bazel_dep(name = "libconfig", version = "1.7.3")
#bazel_dep(name = "libconfig")
#local_path_override(
#    module_name = "libconfig",
#    path = "/home/dmikhin/git/bazel/libconfig",
#)

bazel_dep(name = "libparserutils", version="0.2.5")
#bazel_dep(name = "libparserutils")
#local_path_override(
#    module_name = "libparserutils",
#    path = "/home/dmikhin/git/bazel/libparserutils",
#)

bazel_dep(name = "libhubbub", version="0.3.8")
#bazel_dep(name = "libhubbub")
#local_path_override(
#    module_name = "libhubbub",
#    path = "/home/dmikhin/git/bazel/libhubbub",
#)

#bazel_dep(name = "libxml2", version="2.13.3")
bazel_dep(name = "libxml2")
local_path_override(
    module_name = "libxml2",
    path = "/home/dmikhin/git/bazel/libxml2",
)

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
)

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//libc_aware/toolchain:linux_amd64_gnu.2.17",
    "@zig_sdk//libc_aware/toolchain:linux_arm64_gnu.2.17",
    "@zig_sdk//libc_aware/toolchain:linux_amd64_musl",
    "@zig_sdk//libc_aware/toolchain:linux_arm64_musl",
)
